objects/Implementation_Benchmark__c.object
<CustomObject><fields>
        <fullName>Action_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Improvement Action Step</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Improvement Action Step is not found for this UIP.</errorMessage>
            <filterItems>
                <field>Improvement_Action_Step__c.UIP__c</field>
                <operation>equals</operation>
                <valueField>$Source.UIP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Improvement_Action_Step__c</referenceTo>
        <relationshipLabel>Implementation Benchmarks</relationshipLabel>
        <relationshipName>Implementation_Benchmarks</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Help text for description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Key_Personel__c</fullName>
        <label>Key Personnel</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Implementation Benchmarks</relationshipLabel>
        <relationshipName>Implementation_Benchmarks</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Help text for IB Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>School_Year__c</fullName>
        <label>School Year</label>
        <picklist>
            <picklistValues>
                <fullName>This School Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next School Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Implementation Benchmarks</relationshipLabel>
        <relationshipName>Implementation_Benchmarks</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Implementation Benchmark</label><nameField>
        <label>Implementation Benchmark Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Implementation Benchmarks</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UIP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Implementation_Benchmarks_RT</fullName>
        <active>true</active>
        <description>Contains the fields/picklists used in creating a new Implementation Benchmark.</description>
        <label>Implementation Benchmarks RT</label>
    </recordTypes></CustomObject>